clusters/cluster/apps/neuland-app/ersti-kit-staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersti-kit-staging
  namespace: neuland-app
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: ersti-kit-staging
  template:
    metadata:
      labels:
        app: ersti-kit-staging
    spec:
      containers:
      - name: ersti-kit-staging
        image: ghcr.io/neuland-ingolstadt/ersti-hilfe-kit:develop-45 # {"$imagepolicy": "flux-system:ersti-kit-staging"}
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
