clusters/cluster/apps/neuland-app/ersti-kit-staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersti-kit-staging
  namespace: neuland-app
spec:
  type: ClusterIP
  selector:
    app: ersti-kit-staging
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
