clusters/cluster/apps/neuland-app/ersti-kit-staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ersti-kit-staging
  namespace: neuland-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.ersti.eggl.one
    secretName: neuland-website-tls
  rules:
  - host: dev.ersti.eggl.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ersti-kit-staging
            port:
              number: 3000
